# bunny-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  geometry.h  imgui.ini  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h
cmake/: FindASSIMP.cmake
include/: ThreadPool.h  tgaimage.cpp  tgaimage.h  tinyexr.h
include/assimp/: StringUtils.h
include/glad/: glad.h
lib/: assimp.lib
opengl/: Makefile
rasterizer/: Makefile  model.cpp  model.h
raytracer/: Makefile  aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  main.cpp  material.h  moving_sphere.h  ray.h  rtweekend.h  sphere.h  vec3.h
res/shaders/: default.frag  default.vert  normal.frag  normal.vert  outline.frag  outlineBlur.frag  outlineMerge.frag  pbr.frag  postprocess.frag  shadowMap.vert  skybox.frag  unlit.frag  unlit.vert
res/shaders/editor/: brdf.frag  equirectangular.frag  ibl.frag  irradiance.frag  irradiance.vert  outline.vert  outlineBlur.frag  outlineCompareIds.frag  outlineCompareIds.vert  prefilter.frag
res/shaders/hlsl/: shaders.hlsl
src/: Application.cpp  Application.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RasterizerRenderer.cpp  RasterizerRenderer.h  Renderer.cpp  Renderer.h  main.cpp  main_d3d11.cpp  main_opengl.cpp
src/common/: Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Dialog.cpp  Dialog.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  RealTimeRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Vertex.h
src/d3d11/: D3D11Renderer.cpp  D3D11Renderer.h
src/opengl/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Scene.cpp  Scene.h  Selection.cpp  Selection.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp
src/opengl/shaders/: default.frag  default.vert  skybox.vert
src/rasterizer/: RasterizerRenderer.cpp  RasterizerRenderer.h  model.cpp  our_gl.cpp  our_gl.h  rasterizer.cpp  rasterizer.h
src/raytracer/: RayTracerRenderer.h  material.h  raytracer_camera.h  rtweekend.h  sphere.h  triangle.h  vec3.h
